[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redis_demo"
version = "0.1.0"
description = "fastapi-redis-postgresql concurrey stress test app"
authors = [
  { name="Jinho Park", email="jinhoparkseoul@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
